Refactor, some cleanup and fix things: * split functions into classes or methods, so it is easier to tackle parts in a piecemeal manner * implemented all 4 controller actions (for dummy data)
